implement codes for Issue and return weapons